<resources>

    <string name="app_name">Laptop FIX</string>
    <string name="txtLaptopFix">Laptop Fix</string>
    <string name="txtRun">RUN</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="access">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="name">Nombre completo</string>
    <string name="number">Número telefónico</string>
    <string name="createAccount">Crear cuenta</string>
    <string name="waitAMoment">Espere un momento...</string>
    <string name="establishment">Establecimiento</string>
    <string name="howArrived">¿Cómo llegar?</string>
    <string name="save">Guardar</string>
    <string name="edit">Editar Perfil</string>
    <string name="date">Fecha de revisión</string>
    <string name="hours">Hora aproximada de llegada</string>
    <string name="describe_problem">Descripción del problema</string>
    <string name="description">Descripción...</string>
    <string name="schedule">Agendar</string>
    <string name="pending_appointment">Citas pendientes</string>
    <string name="chat">Chat</string>
    <string name="comments">Comentarios</string>
    <string name="schedule_c">Agendar cita</string>
    <string name="dat">Fecha</string>
    <string name="hour">Hora</string>
    <string name="address">Dirección</string>
    <string name="Onlyproblem">Problema</string>
    <string name="cost">Costo del servicio</string>
    <string name="AddComment">Agregar comentario</string>
    <string name="writeComment">Escribe tu comentario</string>
    <string name="rating">Calificación</string>
    <string name="phone">Teléfono</string>
    <string name="status">Estatus</string>
    <string name="cancelS">Cancelar servicio</string>
    <string name="repair">En reparación</string>
    <string name="deliver">Entregar</string>
    <string name="costTe">Costo</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Jorge Coronel González</string>
    <string name="nav_header_subtitle">4423178052</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Cerrar sesión</string>

    <string name="menu_establecimiento">Establecimiento</string>
    <string name="menu_perfil">Mi perfil</string>
    <string name="menu_chat">Chat Soporte</string>
    <string name="menu_rEquipo">Servicio a domicilio</string>
    <string name="menu_iEstablecimiento">Ir a establecimiento</string>
    <string name="menu_cPendientes">Citas pendientes</string>
    <string name="menu_comentario">Comentarios</string>
    <string name="menu_session">Cerrar sesión</string>
    <string name="registerComplete">¡Registro completado!</string>
    <string name="txtRegisterComplete">Su cuenta ha sido creada de manera exitosa</string>
    <string name="accept">Aceptar</string>
    <string name="title_activity_maps">Map</string>
    <string name="chatlf">Soporte</string>


    <string name="editProfile">Editar perfil</string>
    <string name="changePassword">Cambiar contraseña</string>
    <string name="writePassword">Escribe la nueva contraseña</string>
    <string name="myProfile">Mi perfil</string>
    <string name="txtSave">¡Datos guardados correctamente!</string>
    <string name="txtPasswordSave">Se ha cambiado tu contraseña</string>
    <string name="ok">OK</string>
    <string name="nav_cita">Citas</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_comentario">Comentarios</string>
    <string name="you">Tú</string>
    <string name="this_device_is_not_supported">Este dispositivo no es compatible</string>
    <string name="gps_disable">GPS desactivado</string>
    <string name="active_gps">Es necesario activar el GPS</string>
    <string name="google_direction_api">AIzaSyDAkgi6RLo4sm06Q-70iZvQHAsAj7zqkyE</string>
    <string name="google_server_key">AIzaSyCkoXyGjbZ2T17Zd9wElrdKYMB8oEjyXa0</string>
    <string name="hour_is_selected_before_date">Debes elegir primero una fecha para la cita</string>
    <string name="schedule_appointment">Cita agendada</string>
    <string name="contact_with_technical_support">Mantente en contacto con soporte para aclaraciones o dudas</string>
    <string name="problem_is_empty">Debes escribir el problema de tu equipo</string>
    <string name="date_is_empty">Debes seleccionar una fecha para la cita</string>
    <string name="hour_is_empty">Debes seleccionar una hora para la cita</string>
    <string name="cancel">Cancelar</string>
    <string name="loading_comments">Cargando comentarios...</string>
    <string name="loading_dates">Cargando citas pendientes...</string>
    <string name="required_email">Correo electrónico obligatorio</string>
    <string name="required_password">Contraseña obligatoria</string>
    <string name="required_password_size">Contraseña debe tener 6 dígitos o más</string>
    <string name="required_name">Nombre completo obligatorio</string>
    <string name="required_number">Número telefónico obligatorio</string>
    <string name="required_number_size">Número telefónico incorrecto</string>
    <string name="required_address">Domicilio obligatorio</string>
    <string name="required_rfc">RFC obligatorio</string>
    <string name="na">NA</string>
    <string name="date_appointment">Fecha:</string>
    <string name="hour_appointment">Hora:</string>
    <string name="revision_laptop_fix">Revisión: En Laptop Fix</string>
    <string name="revision_home_service">Revisión: A domicilio</string>
    <string name="problem">Problema:</string>
    <string name="appoinment">Citas pendientes</string>
    <string name="nav_serviciosTec">Servicios</string>
    <string name="nav_actualTec">Actuales</string>
    <string name="nav_perfilTec">Mi perfil</string>
    <string name="changeAddress"><![CDATA[<u>Cambiar dirección</u>]]></string>
    <string name="serviceExpress">Servicio urgente</string>
    <string name="now_service">Servicios actuales</string>
    <string name="urgent">Urgente</string>
    <string name="detailDate">Detalle cita</string>
    <string name="accept_service">Servicio aceptado</string>
    <string name="txt_accept_service">Llega lo más pronto posible a tu destino</string>
    <string name="technical_name">Nombre del técnico</string>
    <string name="technical_phone">Teléfono del técnico</string>
    <string name="customer_name">Nombre del cliente</string>
    <string name="customer_phone">Teléfono del cliente</string>
    <string name="cancel_date">Cancelar cita</string>
    <string name="update_date">Actualizar cita</string>
    <string name="update">Actualizar</string>
    <string name="txt_delete_date">!Cita eliminada correctamente¡</string>
    <string name="txt_success_process">¡Proceso exitoso!</string>
    <string name="txt_cancel_date">Has cancelado la cita</string>
    <string name="writeEmail">Escribe el nuevo correo</string>
    <string name="changeEmail">Cambiar correo</string>
    <string name="txtEmailSave">Se ha cambiado tu correo electrónico</string>
    <string name="solution">Solución del equipo</string>
    <string name="describe">Describir</string>
    <string name="example_cost">Ej. 350</string>
    <string name="noteDeliver">Nota: El costo del servicio se sumará al costo del servicio base que es de:</string>
    <string name="deliverEquipment">Información de entrega</string>
    <string name="describe_required">Descripción obligatoria</string>
    <string name="cost_required">Costo obligatorio</string>
    <string name="fiscal_data">Datos fiscales</string>
    <string name="name_fical">Nombre fiscal</string>
    <string name="cfdi">CFDI</string>
    <string name="rfc">RFC</string>
    <string name="edit_fiscal_data">Editar datos fiscales</string>
    <string name="method_pay">Método de pago</string>
    <string name="bill">Facturar</string>
    <string name="note_bill">Nota: Se aumentará el 16% del total del servicio</string>
    <string name="pay">Pago</string>

</resources>
