<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Customer.UpdateDateActivity"
    android:orientation="vertical">

    <include layout="@layout/actionbar_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginForms"
        android:text="@string/update_date"
        android:textSize="30dp"
        android:textColor="@android:color/black"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginForms">

        <EditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/date"
            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginForms">

        <EditText
            android:id="@+id/etHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:hint="@string/hours"

            android:singleLine="true"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginSideBtn"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_button_blue"/>

</LinearLayout>