<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Customer.FiscalDataFragment"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_fical"
            android:textColor="@color/colorTextHint"
            android:layout_margin="@dimen/marginForms"
            />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMyProfileData"
            android:layout_marginLeft="@dimen/marginForms"
            android:layout_marginRight="@dimen/marginForms"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/colorTextHint"
            android:layout_margin="@dimen/marginForms"
            />

        <TextView
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMyProfileData"
            android:layout_marginLeft="@dimen/marginForms"
            android:layout_marginRight="@dimen/marginForms"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/colorTextHint"
            android:layout_margin="@dimen/marginForms"
            />

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMyProfileData"
            android:layout_marginLeft="@dimen/marginForms"
            android:layout_marginRight="@dimen/marginForms"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rfc"
            android:textColor="@color/colorTextHint"
            android:layout_margin="@dimen/marginForms"
            />

        <TextView
            android:id="@+id/txtRFC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMyProfileData"
            android:layout_marginLeft="@dimen/marginForms"
            android:layout_marginRight="@dimen/marginForms"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cfdi"
            android:textColor="@color/colorTextHint"
            android:layout_margin="@dimen/marginForms"
            />

        <TextView
            android:id="@+id/txtCFDI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMyProfileData"
            android:layout_marginLeft="@dimen/marginForms"
            android:layout_marginRight="@dimen/marginForms"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorTextHint"
            android:layout_margin="@dimen/marginForms"
            />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txtMyProfileData"
            android:layout_marginLeft="@dimen/marginForms"
            android:layout_marginRight="@dimen/marginForms"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>