<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity"
    android:id="@+id/register"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/actionbar_toolbar"/>

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginForms"
            android:text="@string/register"
            android:textSize="30dp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopFormRegister"
            android:layout_marginLeft="@dimen/marginForms"
            android:layout_marginRight="@dimen/marginForms">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginForms"
            android:layout_marginLeft="@dimen/marginForms"
            android:layout_marginRight="@dimen/marginForms">

            <EditText
                android:id="@+id/etNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number"
                android:inputType="number"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginForms"
            android:layout_marginLeft="@dimen/marginForms"
            android:layout_marginRight="@dimen/marginForms">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginForms"
            android:layout_marginLeft="@dimen/marginForms"
            android:layout_marginRight="@dimen/marginForms">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopFormRegister"
            android:layout_marginRight="@dimen/marginSideBtn"
            android:layout_marginLeft="@dimen/marginSideBtn"
            android:text="@string/createAccount"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button_blue"/>

    </LinearLayout>



</android.support.v4.widget.NestedScrollView>