<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteActivity">

    <ImageView
        android:id="@+id/imgLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_like"
        android:layout_marginTop="@dimen/marginTopForm"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/txtRegisterComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerComplete"
        android:textStyle="bold"
        android:layout_below="@id/imgLike"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/marginTopFormRegister"
        android:textSize="@dimen/txtTitleRegisterComplete"
        />

    <TextView
        android:id="@+id/txtMessageRegisterComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtRegisterComplete"
        android:layout_below="@id/txtRegisterComplete"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/marginTopTxtRegisterComplete"
        android:textSize="@dimen/txtMessageRegisterComplete"
        />

    <Button
        android:id="@+id/btnRegisterComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMessageRegisterComplete"
        android:text="@string/accept"
        android:layout_marginRight="@dimen/marginSideBtn"
        android:layout_marginLeft="@dimen/marginSideBtn"
        android:layout_marginTop="@dimen/marginTopBtnRegisterComplete"
        android:background="@drawable/rounded_button_blue"
        android:textColor="@android:color/white"/>

</RelativeLayout>