<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.GoPlaceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/actionbar_toolbar"/>

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/marginTopForm"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginForms">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:inputType="text"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginForms">

            <EditText
                android:id="@+id/etHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hours"
                android:inputType="text"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/marginForms">

            <EditText
                android:id="@+id/etProblem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/problem"
                android:inputType="text"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopFormRegister"
            android:layout_marginRight="@dimen/marginSideBtn"
            android:layout_marginLeft="@dimen/marginSideBtn"
            android:text="@string/schedule"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_button_blue"/>

    </LinearLayout>

</LinearLayout>